<resources>
    <string name="app_name">Calculate tip</string>
    <string name="calculate_tip">Calculate tip</string>
    <string name="cost_of_service">Cost of service</string>
    <string name="tip">Tip (%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="tip_amount">Tip amount: %s</string>
</resources>